--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.510820Z",
-     "start_time": "2024-05-07T12:18:53.739618Z"
+     "end_time": "2024-05-07T13:36:48.664968Z",
+     "start_time": "2024-05-07T13:36:33.176093Z"
     }
    },
    "cell_type": "code",
@@ -32,6 +32,7 @@
     "from tokenizers import Tokenizer\n",
     "\n",
     "from config import extract_log_name, get_file_path\n",
+    "from train import check_boundary_activity_rule, check_directly_following_rule\n",
     "\n",
     "# Suppress warnings\n",
     "warnings.filterwarnings(\"ignore\")\n"
@@ -43,8 +44,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.542033Z",
-     "start_time": "2024-05-07T12:18:56.510820Z"
+     "end_time": "2024-05-07T13:36:48.680523Z",
+     "start_time": "2024-05-07T13:36:48.664968Z"
     }
    },
    "cell_type": "code",
@@ -79,8 +80,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.573245Z",
-     "start_time": "2024-05-07T12:18:56.542033Z"
+     "end_time": "2024-05-07T13:36:48.711828Z",
+     "start_time": "2024-05-07T13:36:48.680523Z"
     }
    },
    "cell_type": "code",
@@ -242,8 +243,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.589070Z",
-     "start_time": "2024-05-07T12:18:56.573245Z"
+     "end_time": "2024-05-07T13:36:48.727457Z",
+     "start_time": "2024-05-07T13:36:48.711828Z"
     }
    },
    "cell_type": "code",
@@ -269,8 +270,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.620533Z",
-     "start_time": "2024-05-07T12:18:56.589070Z"
+     "end_time": "2024-05-07T13:36:48.758673Z",
+     "start_time": "2024-05-07T13:36:48.727457Z"
     }
    },
    "cell_type": "code",
@@ -409,8 +410,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.636249Z",
-     "start_time": "2024-05-07T12:18:56.620533Z"
+     "end_time": "2024-05-07T13:36:48.774265Z",
+     "start_time": "2024-05-07T13:36:48.758673Z"
     }
    },
    "cell_type": "code",
@@ -442,8 +443,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.652295Z",
-     "start_time": "2024-05-07T12:18:56.636249Z"
+     "end_time": "2024-05-07T13:36:48.789888Z",
+     "start_time": "2024-05-07T13:36:48.774265Z"
     }
    },
    "cell_type": "code",
@@ -471,8 +472,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.667960Z",
-     "start_time": "2024-05-07T12:18:56.652295Z"
+     "end_time": "2024-05-07T13:36:48.805512Z",
+     "start_time": "2024-05-07T13:36:48.789888Z"
     }
    },
    "cell_type": "code",
@@ -528,8 +529,57 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.683562Z",
-     "start_time": "2024-05-07T12:18:56.667960Z"
+     "end_time": "2024-05-07T13:36:48.821142Z",
+     "start_time": "2024-05-07T13:36:48.805512Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def fill_missing_case_ids_heuristic(elusive_log: pd.DataFrame, configuration: dict, log_name: str) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Fill the missing Case ID values in the elusive log using a heuristic approach.\n",
+    "    \n",
+    "    :param elusive_log: The DataFrame containing the elusive log.\n",
+    "    :param configuration: The configuration dictionary.\n",
+    "    :param log_name: The name of the log file.\n",
+    "    :return: The DataFrame containing the elusive log with the missing Case ID values filled.\n",
+    "    \"\"\"\n",
+    "    heuristic_file = f\"evaluation/{log_name}/heuristic/heuristic_{log_name}.csv\"\n",
+    "    \n",
+    "    if os.path.exists(heuristic_file) and os.path.getsize(heuristic_file) > 0:\n",
+    "        log = pd.read_csv(heuristic_file)\n",
+    "        print(\"Heuristic log successfully read.\")\n",
+    "        return log\n",
+    "    \n",
+    "    elusive_log['Determined Case ID'] = elusive_log['Original Case ID']\n",
+    "    elusive_log['Timestamp'] = pd.to_datetime(elusive_log['Timestamp'])\n",
+    "    \n",
+    "    possible_expert_attributes = ['Start Activity', 'End Activity', 'Directly Following']\n",
+    "    included_attributes = [attr for attr in possible_expert_attributes if \n",
+    "                           attr in configuration['expert_input_attributes']]\n",
+    "    \n",
+    "    if included_attributes:\n",
+    "        if 'Start Activity' in included_attributes:\n",
+    "            elusive_log = check_boundary_activity_rule(configuration, elusive_log, False, 'start')\n",
+    "        if 'End Activity' in included_attributes:\n",
+    "            elusive_log = check_boundary_activity_rule(configuration, elusive_log, False, 'end')\n",
+    "        if 'Directly Following' in included_attributes:\n",
+    "            elusive_log = check_directly_following_rule(configuration, elusive_log, False)\n",
+    "    \n",
+    "    columns_to_exclude = {'Probability', 'Follow-up Probability', 'Modification'}\n",
+    "    elusive_log.drop(columns=columns_to_exclude.intersection(elusive_log.columns), inplace=True)\n",
+    "    \n",
+    "    return elusive_log\n"
+   ],
+   "id": "9e888c543769efc5",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-07T13:36:48.836842Z",
+     "start_time": "2024-05-07T13:36:48.821142Z"
     }
    },
    "cell_type": "code",
@@ -592,13 +642,13 @@
    ],
    "id": "f15166bf59e288b",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:56.699213Z",
-     "start_time": "2024-05-07T12:18:56.683562Z"
+     "end_time": "2024-05-07T13:36:48.852396Z",
+     "start_time": "2024-05-07T13:36:48.836842Z"
     }
    },
    "cell_type": "code",
@@ -634,13 +684,13 @@
    ],
    "id": "542a104565063188",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:57.106109Z",
-     "start_time": "2024-05-07T12:18:57.082710Z"
+     "end_time": "2024-05-07T13:36:48.868018Z",
+     "start_time": "2024-05-07T13:36:48.852396Z"
     }
    },
    "cell_type": "code",
@@ -663,13 +713,13 @@
    ],
    "id": "d8d8f1a9cedfcf2d",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:57.605327Z",
-     "start_time": "2024-05-07T12:18:57.589704Z"
+     "end_time": "2024-05-07T13:36:48.889578Z",
+     "start_time": "2024-05-07T13:36:48.868018Z"
     }
    },
    "cell_type": "code",
@@ -736,13 +786,13 @@
    ],
    "id": "f635854ae114b1f4",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:57.990483Z",
-     "start_time": "2024-05-07T12:18:57.974843Z"
+     "end_time": "2024-05-07T13:36:48.905681Z",
+     "start_time": "2024-05-07T13:36:48.890116Z"
     }
    },
    "cell_type": "code",
@@ -755,25 +805,33 @@
     "    \n",
     "    if folder_path:\n",
     "        metrics, elusive_log = evaluate_repaired_logs(folder_path, log_name, complete_log, model_configuration)\n",
+    "        \n",
     "        random_log = randomize_missing_case_ids(elusive_log, tokenizer, log_name)\n",
     "        random_metrics = evaluate_other_log(metrics, random_log, complete_log, model_configuration)\n",
     "        random_metrics = format_consistency_metrics(random_metrics, model_configuration)\n",
+    "        \n",
     "        logistic_log = fill_missing_case_ids_logreg(complete_log, elusive_log, log_name)\n",
     "        logistic_metrics = evaluate_other_log(metrics, logistic_log, complete_log, model_configuration)\n",
     "        logistic_metrics = format_consistency_metrics(logistic_metrics, model_configuration)\n",
+    "        \n",
+    "        heuristic_log = fill_missing_case_ids_heuristic(elusive_log, model_configuration, log_name)\n",
+    "        heuristic_metrics = evaluate_other_log(metrics, heuristic_log, complete_log, model_configuration)\n",
+    "        heuristic_metrics = format_consistency_metrics(heuristic_metrics, model_configuration)\n",
+    "        \n",
     "        process_metrics(metrics, log_name)\n",
     "        process_metrics(random_metrics, log_name, 'randomized', random_log)\n",
-    "        process_metrics(logistic_metrics, log_name, 'logistic regression', logistic_log)\n"
+    "        process_metrics(logistic_metrics, log_name, 'logistic regression', logistic_log)\n",
+    "        process_metrics(heuristic_metrics, log_name, 'heuristic', heuristic_log)\n"
    ],
    "id": "e9ec5cb5f083a59b",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:58.449781Z",
-     "start_time": "2024-05-07T12:18:58.419700Z"
+     "end_time": "2024-05-07T13:36:48.921313Z",
+     "start_time": "2024-05-07T13:36:48.905681Z"
     }
    },
    "cell_type": "code",
@@ -796,13 +854,13 @@
    ],
    "id": "57f4364067a174a4",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:58.904517Z",
-     "start_time": "2024-05-07T12:18:58.873224Z"
+     "end_time": "2024-05-07T13:36:48.936977Z",
+     "start_time": "2024-05-07T13:36:48.921313Z"
     }
    },
    "cell_type": "code",
@@ -825,13 +883,13 @@
    ],
    "id": "8b640d1990ea4e97",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:18:59.317868Z",
-     "start_time": "2024-05-07T12:18:59.302246Z"
+     "end_time": "2024-05-07T13:36:48.952600Z",
+     "start_time": "2024-05-07T13:36:48.936977Z"
     }
    },
    "cell_type": "code",
@@ -877,13 +935,13 @@
    ],
    "id": "14840cf9ee8f2eb8",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:19:00.085647Z",
-     "start_time": "2024-05-07T12:19:00.070094Z"
+     "end_time": "2024-05-07T13:36:48.968189Z",
+     "start_time": "2024-05-07T13:36:48.952600Z"
     }
    },
    "cell_type": "code",
@@ -911,17 +969,20 @@
     "        log.to_csv(os.path.join(folder_name, file_name), index=False)\n",
     "    elif model_name == 'logistic_regression':\n",
     "        file_name = f'logistic_regression_{log_name}.csv'\n",
+    "        log.to_csv(os.path.join(folder_name, file_name), index=False)\n",
+    "    elif model_name == 'heuristic':\n",
+    "        file_name = f'heuristic_{log_name}.csv'\n",
     "        log.to_csv(os.path.join(folder_name, file_name), index=False)\n"
    ],
    "id": "2b88746e93f1974d",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:19:18.105654Z",
-     "start_time": "2024-05-07T12:19:01.447127Z"
+     "end_time": "2024-05-07T13:37:05.893666Z",
+     "start_time": "2024-05-07T13:36:50.940216Z"
     }
    },
    "cell_type": "code",
@@ -938,6 +999,7 @@
       "Tokenizer successfully read.\n",
       "Randomized log successfully read.\n",
       "Logistic regression log successfully read.\n",
+      "Set 1 determined Case ID value based on the input for 'Start Activity'.\n",
       "\n",
       "=== TRANSFORMER ===\n",
       "\n",
@@ -1054,11 +1116,42 @@
       "|           0 | 83.33%                |\n",
       "+-------------+-----------------------+\n",
       "|           1 | 100.00%               |\n",
+      "+-------------+-----------------------+\n",
+      "\n",
+      "=== HEURISTIC ===\n",
+      "\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|   Iteration | Completeness   | Elus. Completeness   | Accuracy   | Elus. Accuracy   |\n",
+      "+=============+================+======================+============+==================+\n",
+      "|           0 | 80.95%         | 0.00%                | 80.95%     | 0.00%            |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|           1 | 83.33%         | 12.50%               | 83.33%     | 12.50%           |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "|   Iteration | Factual Accuracy   | Elus. Factual Accuracy   | Overall Accuracy   | Elus. Overall Accuracy   |\n",
+      "+=============+====================+==========================+====================+==========================+\n",
+      "|           0 | 0.00%              | 0.00%                    | 80.95%             | 0.00%                    |\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "|           1 | 0.00%              | 0.00%                    | 83.33%             | 12.50%                   |\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
+      "|   Iteration | Real Case Accuracy   | Factual Case Accuracy   | Overall Case Accuracy   | St. Ac. Consistency   |\n",
+      "+=============+======================+=========================+=========================+=======================+\n",
+      "|           0 | 0.00%                | 0.00%                   | 0.00%                   | 83.33%                |\n",
+      "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
+      "|           1 | 0.00%                | 0.00%                   | 0.00%                   | 100.00%               |\n",
+      "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
+      "+-------------+-----------------------+\n",
+      "|   Iteration | End Ac. Consistency   |\n",
+      "+=============+=======================+\n",
+      "|           0 | 83.33%                |\n",
+      "+-------------+-----------------------+\n",
+      "|           1 | 83.33%                |\n",
       "+-------------+-----------------------+\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 19
   }
  ],
  "metadata": {
