Expert input during repair enabled

--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -290,7 +290,7 @@
     "    :return: The proportion of correct directly following activities in all cases.\n",
     "    \"\"\"\n",
     "    num_correct_directly_following = 0\n",
-    "    directly_following = configuration['expert_input_values']['Directly Following']\n",
+    "    directly_following = configuration['complete_expert_values']['Directly Following']\n",
     "    always_directly_following = [pair for pair, occurrence in zip(\n",
     "        directly_following['values'], directly_following['occurrences']) if occurrence == 'always']\n",
     "\n",
@@ -343,7 +343,7 @@
     "    for case_id, group in df.groupby(column):\n",
     "        if pd.notna(case_id):\n",
     "            end_activity = group['Activity'].iloc[-1]\n",
-    "            if end_activity in configuration['expert_input_values']['End Activity']['values']:\n",
+    "            if end_activity in configuration['complete_expert_values']['End Activity']['values']:\n",
     "                num_correct_end += 1\n",
     "\n",
     "    num_cases = len(df[column].dropna().unique())\n",
@@ -367,7 +367,7 @@
     "    for case_id, group in df.groupby(column):\n",
     "        if pd.notna(case_id):\n",
     "            start_activity = group['Activity'].iloc[0]\n",
-    "            if start_activity in configuration['expert_input_values']['Start Activity']['values']:\n",
+    "            if start_activity in configuration['complete_expert_values']['Start Activity']['values']:\n",
     "                num_correct_start += 1\n",
     "\n",
     "    num_cases = len(df[column].dropna().unique())\n",
@@ -384,12 +384,12 @@
     "    :param column: The column to evaluate consistency.\n",
     "    :return: Dictionary containing the quality metrics.\n",
     "    \"\"\"\n",
-    "    if not configuration['expert_input_attributes'] or column not in df.columns:\n",
+    "    if not configuration['complete_expert_attributes'] or column not in df.columns:\n",
     "        return {}\n",
     "    \n",
     "    start_activity_consistency, end_activity_consistency, directly_following_consistency = None, None, None\n",
     "\n",
-    "    for attribute in configuration['expert_input_attributes']:\n",
+    "    for attribute in configuration['complete_expert_attributes']:\n",
     "        if attribute == 'Start Activity':\n",
     "            start_activity_consistency = calculate_start_activity_consistency(df, configuration, column)\n",
     "        elif attribute == 'End Activity':\n",
@@ -556,7 +556,7 @@
     "    \n",
     "    possible_expert_attributes = ['Start Activity', 'End Activity', 'Directly Following']\n",
     "    included_attributes = [attr for attr in possible_expert_attributes if \n",
-    "                           attr in configuration['expert_input_attributes']]\n",
+    "                           attr in configuration['complete_expert_attributes']]\n",
     "    \n",
     "    if included_attributes:\n",
     "        if 'Start Activity' in included_attributes:\n",
@@ -663,13 +663,13 @@
     "    \"\"\"\n",
     "    possible_expert_attributes = ['Start Activity', 'End Activity', 'Directly Following']\n",
     "    included_attributes = [attr for attr in possible_expert_attributes if \n",
-    "                           attr in configuration['expert_input_attributes']]\n",
+    "                           attr in configuration['complete_expert_attributes']]\n",
     "    missing_attributes = [attr for attr in possible_expert_attributes if \n",
-    "                          attr not in configuration['expert_input_attributes']]\n",
+    "                          attr not in configuration['complete_expert_attributes']]\n",
     "    \n",
     "    if included_attributes:\n",
     "        if ('Directly Following' in included_attributes and \n",
-    "                'always' not in configuration['expert_input_values']['Directly Following']['occurrences']):\n",
+    "                'always' not in configuration['complete_expert_values']['Directly Following']['occurrences']):\n",
     "            metrics.drop(columns=\"Di. Fo. Consistency\", inplace=True)\n",
     "    \n",
     "    if missing_attributes:\n",
