--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -607,8 +607,8 @@
     "    for col in categorical_cols:\n",
     "        if col in input_data.columns:\n",
     "            if len(input_data[col].unique()) > 2:\n",
-    "                encoder = OneHotEncoder(sparse=False)\n",
-    "                encoded_cols = pd.DataFrame(encoder.fit_transform(input_data[[col]]),\n",
+    "                encoder = OneHotEncoder()\n",
+    "                encoded_cols = pd.DataFrame(encoder.fit_transform(input_data[[col]]).toarray(),\n",
     "                                            columns=encoder.get_feature_names_out([col]))\n",
     "                input_data.drop(columns=[col], inplace=True)\n",
     "                input_data = pd.concat([input_data, encoded_cols], axis=1)\n",
