--- a/prototype_interaction.ipynb
+++ b/prototype_interaction.ipynb
@@ -1,6 +1,12 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Dummy Interaction with the System\n",
+   "id": "78cd1819d1ae1b00"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
@@ -24,7 +30,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Step 0: Process Model and Event Log\n",
+    "## Step 0: Process Model and Event Log\n",
     "\n",
     "<span style=\"color:red\">Please note: This step is simply meant to acquaint you with the process and does not constitute a part of the actual model.</span>\n"
    ],
@@ -64,7 +70,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Step 1: Configure the Transformer for Training\n",
+   "source": "## Step 1: Configure the Transformer for Training\n",
    "id": "4c34c3b0f1c35712"
   },
   {
@@ -175,7 +181,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Step 2: Repair the Event Log Containing the Elusive Case\n",
+   "source": "## Step 2: Repair the Event Log Containing the Elusive Case\n",
    "id": "37c1892c6181c3e8"
   },
   {
