--- a/prototype_interaction.ipynb
+++ b/prototype_interaction.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "The event log's structure is as follows (excerpt of the initial ten lines displayed below):\n",
+    "The event log's structure is as follows (excerpt of the initial ten rows displayed below):\n",
     "\n",
     "|   isCancelled | diagnosis   | time:timestamp            | caseType   | speciality   | org:resource   | concept:name   |   blocked |   isClosed |   flagD |   flagB |   flagA | state       | lifecycle:transition   | case:concept:name   | closeCode   |   actRed |   actOrange |   flagC |   msgCount | version   |   msgType |   msgCode |\n",
     "|--------------:|:------------|:--------------------------|:-----------|:-------------|:---------------|:---------------|----------:|-----------:|--------:|--------:|--------:|:------------|:-----------------------|:--------------------|:------------|---------:|------------:|--------:|-----------:|:----------|----------:|----------:|\n",
