--- a/prototype_interaction.ipynb
+++ b/prototype_interaction.ipynb
@@ -24,6 +24,15 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "**Executing Code:** Click the \"Run\" button or press `Shift + Enter` to execute the code in the code cell.  \n",
+    "**Entering Input:** To input values, click on the code cell containing the input prompt. Then, type your input directly into the cell and press `Enter` to submit it.\n"
+   ],
+   "id": "376240bcdd60d96e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## Step 0: Process Model and Event Log\n",
     "\n",
     "<span style=\"color:red\">Please be aware: This step is designed solely to familiarise you with the process and is not considered a component of the actual model.</span>\n"
