--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "176cccf3-8f91-454e-a6e0-dc8c9ceba4f7",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "150b7690c957beff",
    "metadata": {
     "ExecuteTime": {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1d1fbcc9e37b07b9",
    "metadata": {
     "ExecuteTime": {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6de1ecf6abac8cab",
    "metadata": {
     "ExecuteTime": {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7718604500500e32",
    "metadata": {
     "ExecuteTime": {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1b1fa2ebafd9d7a0",
    "metadata": {
     "ExecuteTime": {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "15b37fa02ad6db9d",
    "metadata": {
     "ExecuteTime": {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9e888c543769efc5",
    "metadata": {
     "ExecuteTime": {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f15166bf59e288b",
    "metadata": {
     "ExecuteTime": {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "542a104565063188",
    "metadata": {
     "ExecuteTime": {
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d8d8f1a9cedfcf2d",
    "metadata": {
     "ExecuteTime": {
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f635854ae114b1f4",
    "metadata": {
     "ExecuteTime": {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e9ec5cb5f083a59b",
    "metadata": {
     "ExecuteTime": {
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "57f4364067a174a4",
    "metadata": {
     "ExecuteTime": {
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "8b640d1990ea4e97",
    "metadata": {
     "ExecuteTime": {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "14840cf9ee8f2eb8",
    "metadata": {
     "ExecuteTime": {
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "2b88746e93f1974d",
    "metadata": {
     "ExecuteTime": {
@@ -2805,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "30a1dcb1-eb00-4f9f-92d8-8555e65138ed",
    "metadata": {},
    "outputs": [
@@ -2862,7 +2862,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tokenizer successfully read.\n"
+      "Tokenizer successfully read.\n",
+      "\n",
+      "=== TRANSFORMER ===\n",
+      "\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|   Iteration | Completeness   | Elus. Completeness   | Accuracy   | Elus. Accuracy   |\n",
+      "+=============+================+======================+============+==================+\n",
+      "|           0 | 90.00%         | 0.00%                | 90.00%     | 0.00%            |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|           1 | 99.68%         | 96.83%               | 92.11%     | 21.05%           |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|           2 | 99.95%         | 99.52%               | 92.11%     | 21.07%           |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|           3 | 99.98%         | 99.84%               | 92.11%     | 21.07%           |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|           4 | 99.99%         | 99.89%               | 92.11%     | 21.07%           |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|           5 | 99.99%         | 99.92%               | 92.11%     | 21.07%           |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "+-------------+------------------+--------------------+--------------------------+--------------------------+\n",
+      "|   Iteration | Prop. Accuracy   | Factual Accuracy   | Elus. Factual Accuracy   | Prop. Factual Accuracy   |\n",
+      "+=============+==================+====================+==========================+==========================+\n",
+      "|           0 | 0.00%            | 0.55%              | 0.00%                    | 0.00%                    |\n",
+      "+-------------+------------------+--------------------+--------------------------+--------------------------+\n",
+      "|           1 | 21.74%           | 0.00%              | -0.55%                   | -0.57%                   |\n",
+      "+-------------+------------------+--------------------+--------------------------+--------------------------+\n",
+      "|           2 | 21.17%           | 0.00%              | -0.55%                   | -0.56%                   |\n",
+      "+-------------+------------------+--------------------+--------------------------+--------------------------+\n",
+      "|           3 | 21.11%           | 0.00%              | -0.55%                   | -0.55%                   |\n",
+      "+-------------+------------------+--------------------+--------------------------+--------------------------+\n",
+      "|           4 | 21.10%           | 0.00%              | -0.55%                   | -0.55%                   |\n",
+      "+-------------+------------------+--------------------+--------------------------+--------------------------+\n",
+      "|           5 | 21.09%           | 0.00%              | -0.55%                   | -0.55%                   |\n",
+      "+-------------+------------------+--------------------+--------------------------+--------------------------+\n",
+      "+-------------+--------------------+--------------------------+--------------------------+----------------------+\n",
+      "|   Iteration | Overall Accuracy   | Elus. Overall Accuracy   | Prop. Overall Accuracy   | Real Case Accuracy   |\n",
+      "+=============+====================+==========================+==========================+======================+\n",
+      "|           0 | 90.55%             | 0.00%                    | 0.00%                    | 64.48%               |\n",
+      "+-------------+--------------------+--------------------------+--------------------------+----------------------+\n",
+      "|           1 | 92.11%             | 16.45%                   | 16.99%                   | 67.89%               |\n",
+      "+-------------+--------------------+--------------------------+--------------------------+----------------------+\n",
+      "|           2 | 92.11%             | 16.47%                   | 16.55%                   | 67.74%               |\n",
+      "+-------------+--------------------+--------------------------+--------------------------+----------------------+\n",
+      "|           3 | 92.11%             | 16.47%                   | 16.50%                   | 67.71%               |\n",
+      "+-------------+--------------------+--------------------------+--------------------------+----------------------+\n",
+      "|           4 | 92.11%             | 16.47%                   | 16.49%                   | 67.70%               |\n",
+      "+-------------+--------------------+--------------------------+--------------------------+----------------------+\n",
+      "|           5 | 92.11%             | 16.47%                   | 16.49%                   | 67.70%               |\n",
+      "+-------------+--------------------+--------------------------+--------------------------+----------------------+\n",
+      "+-------------+-------------------------+-------------------------+-----------------------+-----------------------+\n",
+      "|   Iteration | Factual Case Accuracy   | Overall Case Accuracy   | St. Ac. Consistency   | End Ac. Consistency   |\n",
+      "+=============+=========================+=========================+=======================+=======================+\n",
+      "|           0 | 2.41%                   | 66.89%                  | 91.99%                | 87.70%                |\n",
+      "+-------------+-------------------------+-------------------------+-----------------------+-----------------------+\n",
+      "|           1 | 0.00%                   | 67.89%                  | 98.41%                | 89.12%                |\n",
+      "+-------------+-------------------------+-------------------------+-----------------------+-----------------------+\n",
+      "|           2 | 0.00%                   | 67.74%                  | 98.41%                | 89.12%                |\n",
+      "+-------------+-------------------------+-------------------------+-----------------------+-----------------------+\n",
+      "|           3 | 0.00%                   | 67.71%                  | 98.41%                | 89.12%                |\n",
+      "+-------------+-------------------------+-------------------------+-----------------------+-----------------------+\n",
+      "|           4 | 0.00%                   | 67.70%                  | 98.41%                | 89.12%                |\n",
+      "+-------------+-------------------------+-------------------------+-----------------------+-----------------------+\n",
+      "|           5 | 0.00%                   | 67.70%                  | 98.41%                | 89.12%                |\n",
+      "+-------------+-------------------------+-------------------------+-----------------------+-----------------------+\n"
      ]
     }
    ],
