--- a/prototype_interaction.ipynb
+++ b/prototype_interaction.ipynb
@@ -19,9 +19,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "import dummy_transformer\n"
-   ]
+   "source": "import elusive_case_transformer\n"
   },
   {
    "cell_type": "markdown",
@@ -114,11 +112,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Do you want to use a specific response configuration file for model training? (yes/no): \u001b[1mno\n",
+      "Do you want to use a specific response configuration file for model training? (yes/no): \u001B[1mno\n",
       "\n",
-      "\u001b[0mConfiguration of model training\n",
-      "Enter the path to the file that contains the event log: \u001b[1mlogs/renting_log_low.xes\n",
-      "\u001b[0mXES file successfully read.\n"
+      "\u001B[0mConfiguration of model training\n",
+      "Enter the path to the file that contains the event log: \u001B[1mlogs/renting_log_low.xes\n",
+      "\u001B[0mXES file successfully read.\n"
      ]
     },
     {
@@ -132,13 +130,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3mInput attributes for the transformer: Activity, Timestamp, Resource\u001b[0m\n"
+      "\u001B[3mInput attributes for the transformer: Activity, Timestamp, Resource\u001B[0m\n"
      ]
     }
    ],
-   "source": [
-    "dummy_transformer.transformer_input()\n"
-   ]
+   "source": "elusive_case_transformer.transformer_input()\n"
   },
   {
    "cell_type": "markdown",
@@ -172,13 +168,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3mExpert attributes: Yes\u001b[0m\n"
+      "\u001B[3mExpert attributes: Yes\u001B[0m\n"
      ]
     }
    ],
-   "source": [
-    "dummy_transformer.expert_input()\n"
-   ]
+   "source": "elusive_case_transformer.expert_input()\n"
   },
   {
    "cell_type": "markdown",
@@ -213,18 +207,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3mExpert attribute: Start Activity\u001b[0m\n",
+      "\u001B[3mExpert attribute: Start Activity\u001B[0m\n",
       "Please enter the value(s) that represent(s) the attribute 'Start Activity' (separated by commas) –\n",
       "Suggestions (proportion of cases with corresponding Activity as the Start Activity): Apply for Viewing Appointment (100.00%):\n",
-      "\u001b[1mApply for Viewing Appointment\u001b[0m\n",
+      "\u001B[1mApply for Viewing Appointment\u001B[0m\n",
       "Does 'Apply for Viewing Appointment' always or sometimes represent the attribute 'Start Activity'?\n",
-      "Enter 'always' or 'sometimes': \u001b[1malways\u001b[0m\n"
+      "Enter 'always' or 'sometimes': \u001B[1malways\u001B[0m\n"
      ]
     }
    ],
-   "source": [
-    "dummy_transformer.provide_expert_input()\n"
-   ]
+   "source": "elusive_case_transformer.provide_expert_input()\n"
   },
   {
    "cell_type": "markdown",
@@ -276,16 +268,16 @@
      "output_type": "stream",
      "text": [
       "Configuration of log repair\n",
-      "Do you want to predict the Case ID values using the event log that was used for training? (yes/no): \u001b[1mno\n",
-      "\u001b[0mPlease ensure the new event log and its name match the process used during training.\n",
-      "Enter the path to the file that contains the event log: \u001b[1mlogs/elusive/renting_log_low.xes\n",
-      "\u001b[0mXES file successfully read.\n",
-      "\u001b[3mData Loading\u001b[0m\n",
+      "Do you want to predict the Case ID values using the event log that was used for training? (yes/no): \u001B[1mno\n",
+      "\u001B[0mPlease ensure the new event log and its name match the process used during training.\n",
+      "Enter the path to the file that contains the event log: \u001B[1mlogs/elusive/renting_log_low.xes\n",
+      "\u001B[0mXES file successfully read.\n",
+      "\u001B[3mData Loading\u001B[0m\n",
       "Please note that incorporating declarative rule checking may result in assumption-based modifications.\n",
-      "Do you want to proceed with ex ante rule checking in this iteration? (yes/no): \u001b[1mno\u001b[0m\n",
-      "Please enter the minimum probability (in %) with which the Case ID must be determined in order for it to be accepted: \u001b[1m25\u001b[0m\n",
+      "Do you want to proceed with ex ante rule checking in this iteration? (yes/no): \u001B[1mno\u001B[0m\n",
+      "Please enter the minimum probability (in %) with which the Case ID must be determined in order for it to be accepted: \u001B[1m25\u001B[0m\n",
       "Please note that incorporating declarative rule checking may result in assumption-based modifications.\n",
-      "Do you want to proceed with ex post rule checking in this iteration? (yes/no): \u001b[1mno\u001b[0m\n",
+      "Do you want to proceed with ex post rule checking in this iteration? (yes/no): \u001B[1mno\u001B[0m\n",
       "For 10.00% of the events, the Case ID has originally not been recorded.\n",
       "\n",
       "Repair Iteration 1:\n",
@@ -330,9 +322,9 @@
       "\n",
       "For 9.54% of the events, the Case ID has not yet been determined.\n",
       "--------------------------------------------------------------------------------\n",
-      "Do you want to use the repaired log as the baseline for an additional repair? (yes/no): \u001b[1myes\n",
-      "\u001b[0mDo you want to keep the probability threshold for the next repair? (yes/no): \u001b[1mno\n",
-      "\u001b[0m\n"
+      "Do you want to use the repaired log as the baseline for an additional repair? (yes/no): \u001B[1myes\n",
+      "\u001B[0mDo you want to keep the probability threshold for the next repair? (yes/no): \u001B[1mno\n",
+      "\u001B[0m\n"
      ]
     },
     {
@@ -346,13 +338,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3mExpert attributes: No\u001b[0m\n"
+      "\u001B[3mExpert attributes: No\u001B[0m\n"
      ]
     }
    ],
-   "source": [
-    "dummy_transformer.add_expert_input()\n"
-   ]
+   "source": "elusive_case_transformer.add_expert_input()\n"
   },
   {
    "cell_type": "markdown",
@@ -380,7 +370,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3mNo additional expert attributes provided.\u001b[0m\n"
+      "\u001B[3mNo additional expert attributes provided.\u001B[0m\n"
      ]
     }
    ],
@@ -421,13 +411,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3mRule checking: Yes\u001b[0m\n"
+      "\u001B[3mRule checking: Yes\u001B[0m\n"
      ]
     }
    ],
-   "source": [
-    "dummy_transformer.rule_check()\n"
-   ]
+   "source": "elusive_case_transformer.rule_check()\n"
   },
   {
    "cell_type": "markdown",
@@ -461,9 +449,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3mThreshold value: 0.0\u001b[0m\n",
+      "\u001B[3mThreshold value: 0.0\u001B[0m\n",
       "Please note that incorporating declarative rule checking may result in assumption-based modifications.\n",
-      "Do you want to proceed with ex post rule checking in this iteration? (yes/no): \u001b[1myes\u001b[0m\n",
+      "Do you want to proceed with ex post rule checking in this iteration? (yes/no): \u001B[1myes\u001B[0m\n",
       "\n",
       "Repair Iteration 2:\n",
       "\n",
@@ -519,14 +507,12 @@
       "\n",
       "For 0.94% of the events, the Case ID has not yet been determined.\n",
       "--------------------------------------------------------------------------------\n",
-      "Do you want to use the repaired log as the baseline for an additional repair? (yes/no): \u001b[1mno\n",
-      "\u001b[0m\n"
+      "Do you want to use the repaired log as the baseline for an additional repair? (yes/no): \u001B[1mno\n",
+      "\u001B[0m\n"
      ]
     }
    ],
-   "source": [
-    "dummy_transformer.threshold()\n"
-   ]
+   "source": "elusive_case_transformer.threshold()\n"
   },
   {
    "cell_type": "markdown",
