--- a/notebooks/quality_metrics.ipynb
+++ b/notebooks/quality_metrics.ipynb
@@ -36,8 +36,8 @@
     "from tkinter import filedialog\n",
     "from tokenizers import Tokenizer\n",
     "\n",
-    "from config import extract_log_name, get_file_path\n",
-    "from train import check_boundary_activity_rule, check_directly_following_rule\n",
+    "from src.config import extract_log_name, get_file_path\n",
+    "from scripts.train import check_boundary_activity_rule, check_directly_following_rule\n",
     "\n",
     "# Suppress warnings\n",
     "warnings.filterwarnings(\"ignore\")\n"
@@ -589,7 +589,7 @@
     "    :param log_name: The name of the log file.\n",
     "    :return: The DataFrame containing the elusive log with the missing Case ID values filled.\n",
     "    \"\"\"\n",
-    "    heuristic_file = f\"evaluation/{log_name}/heuristic/heuristic_{log_name}.csv\"\n",
+    "    heuristic_file = f\"../evaluation/{log_name}/heuristic/heuristic_{log_name}.csv\"\n",
     "    \n",
     "    if os.path.exists(heuristic_file) and os.path.getsize(heuristic_file) > 0:\n",
     "        log = pd.read_csv(heuristic_file)\n",
@@ -638,7 +638,7 @@
     "    :param log_name: The name of the log file.\n",
     "    :return: The DataFrame containing the elusive log with the missing Case ID values filled.\n",
     "    \"\"\"\n",
-    "    log_reg_file = f\"evaluation/{log_name}/logistic_regression/logistic_regression_{log_name}.csv\"\n",
+    "    log_reg_file = f\"../evaluation/{log_name}/logistic_regression/logistic_regression_{log_name}.csv\"\n",
     "    \n",
     "    if os.path.exists(log_reg_file) and os.path.getsize(log_reg_file) > 0:\n",
     "        log = pd.read_csv(log_reg_file)\n",
@@ -949,7 +949,7 @@
     "    :param log_name: Name of the log file.\n",
     "    :return: Log with missing Case ID values randomized.\n",
     "    \"\"\"\n",
-    "    randomized_file = f\"evaluation/{log_name}/randomized/randomized_{log_name}.csv\"\n",
+    "    randomized_file = f\"../evaluation/{log_name}/randomized/randomized_{log_name}.csv\"\n",
     "    \n",
     "    if os.path.exists(randomized_file) and os.path.getsize(randomized_file) > 0:\n",
     "        log = pd.read_csv(randomized_file)\n",
@@ -1002,7 +1002,7 @@
     "    :param log: DataFrame containing the log.\n",
     "    \"\"\"\n",
     "    model_name = model_name.replace(' ', '_')\n",
-    "    folder_name = f\"evaluation/{log_name}/{model_name}\"\n",
+    "    folder_name = f\"../evaluation/{log_name}/{model_name}\"\n",
     "    os.makedirs(folder_name, exist_ok=True)\n",
     "\n",
     "    current_time = datetime.utcnow().strftime('%Y%m%d_%H%M%S')\n",
